tests/regression/error/hw4_error16.correct
boolean guard required for 'cond' expression, found none
